[package]
name = "comcigan-rs"
version = "1.0.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/dolphin2410/comcigan-rs/"
license = "MIT OR Apache-2.0"
keywords = ["comcigan", "comcigan-parser"]
description = "comcigan web api parsing library"

[dependencies]
encoding_rs = "0.8.30"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fancy-regex = "0.8.0"