[package]
name = "comcigan-rs"
version = "1.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/dolphin2410/comcigan-rs/"
license = "MIT OR Apache-2.0"
keywords = ["comcigan", "comcigan-parser"]
description = "comcigan web api parsing library"

[lib]
crate-type = ["cdylib"]

[dependencies]
encoding_rs = "0.8.30"
hyper = { version = "0.14", features = ["full"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fancy-regex = "0.8.0"
bytes = "1.3.0"
anyhow = "1.0.66"
async-trait = "0.1.58"

ehttp = { version = "0.2.0", optional = true }


[features]
hyper = ["dep:hyper", "tokio"]
wasm = ["dep:ehttp"]
tokio = ["dep:tokio"]